# autonomous-orchestrator

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENT-CODEX.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements-dev.txt  smoke_test.py
.claude/: launch.json  settings.json
.codex/: README.md  config.toml
.githooks/: pre-commit  pre-push
.github/: .gitleaks.toml  dependabot.yml
capabilities/: CAP-PR-PACKAGER.v1.json  CAP_ARCH_ADR_DRAFT.v1.json  CAP_DOC_CONTROLLED_DOC.v1.json  CAP_ISO_CONTROL_BASE.v1.json  CAP_NIST_AI_RMF_BASE.v1.json  CAP_OWASP_AI_BASE.v1.json
ci/: __init__.py  ai_config_contract_test.py  check_context_bootstrap.py  check_design_lab_layers.py  check_duplicate_utils.py  check_enforcement_rules.py  check_script_budget.py  check_standards_lock.py  check_standards_lock_validators.py  check_test_quality.py  check_write_path_compliance.py  compaction_engine_contract_test.py  context_bootstrap_contract_test.py  context_drift_contract_test.py  context_pack_contract_test.py  context_reconciler_contract_test.py  core_ops_contract_test.py  decision_boundary_contract_test.py  doc_nav_critical_to_incident_test.py  eval_enforcement_golden_tasks.py  extension_context_bridge_contract_test.py  fact_evolution_contract_test.py  manual_request_contract_test.py  memory_distiller_contract_test.py  module_delivery_lanes.v1.json  pdca_regression_to_incident_test.py  policy_check_deprecation_gate_contract_test.py  policy_diff_sim.py  policy_dry_run.py  policy_report_deprecation_contract_test.py  quality_gate_contract_test.py  router_policy_matrix_test.py  script_budget.v1.json  script_budget_to_project_test.py  smoke_test.py  validate_pack_manifest.py  validate_schemas.py  work_intake_bucket_refinement_contract_test.py  work_intake_contract_test.py  work_intake_exec_ticket_contract_test.py  (+2 more)
decisions/: registry.v1.json
deploy/: docker-compose.prod.yml
src/: cli.py  (+1 more)
(+1624 files in other folders)
