[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-orchestrator"
version = "0.1.1"
description = "WWV deterministic orchestrator skeleton (JSON-first)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Halil Kocoglu"}
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = ["jsonschema>=4.23.0"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[project.scripts]
orchestrator = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
