[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-orchestrator"
version = "1.0.0"
description = "WWV deterministic orchestrator skeleton (JSON-first)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Halil Kocoglu"}
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = ["jsonschema>=4.23.0"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[project.scripts]
orchestrator = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "contract: deterministic contract coverage",
    "kernel_api: PRJ-KERNEL-API test surface",
    "ops: src/ops test surface",
    "script_contract: script-backed contract coverage",
    "surface: UI/system-status surface coverage",
    "serial: test should not run concurrently with peers",
    "http: HTTP gateway or socket-backed coverage",
    "known_red: expected-failing migration target; not for blocking lanes",
]
